[package]
name = "rust-dotfile-installer"
version = "0.1.0"
authors = ["Drew Hutton <drew.business2308@gmail.com>"]
edition = "2018"

[dependencies]
termcolor = "1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"

[dependencies.clap]
version = "2.33"
default-features = false
features = ["color"]
